--- a/test.css
+++ b/test.css
@@ -1,65 +1,144 @@
 * {
     font-family: 'Poppins', sans-serif;
   }
+  
   .Container {
-    width: 375px;
-    height: 92px;
-    padding-top: 44px;
-
-
+  width: 375px;
+  height: 92px;
+  padding-top: 44px;
   }
   
   .ToolbarDark {
-
-    width: 375px;
-    height: 48px;
-    top: 44px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 4px 24px 4px 12px;
-
+  width: 375px;
+  height: 48px;
+  top: 44px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 4px 24px 4px 12px;
   }
+  
   .MyLogoContainer {
-    width: 100px;
-    height: 40px;
-    top: 4px;
-    left: 12px;
+  width: 100px;
+  height: 40px;
+  top: 4px;
+  left: 12px;
   }
   
   .MyLogo {
-    width: 76px;
-    height: 20px;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 20px;
-    align-content: center;
-    color: #6070ff;
+  width: 76px;
+  height: 20px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  align-content: center;
+  color: #6070ff;
   }
   
   .BurgerButtonContainer {
-    width: 40px;
-    height: 40px;
-    top: 4px;
-    left: 311px;
-    padding: 8px;
-    border-radius: 8px;
-   
-
-    
+  width: 40px;
+  height: 40px;
+  top: 4px;
+  left: 311px;
+  padding: 8px;
+  border-radius: 8px;
   }
   
   .BurgerButtonContainer2 {
-    width: 24px;
-    height: 24px;
-    padding: 6px 3px 6px 3px;
-   
+  width: 24px;
+  height: 24px;
+  padding: 6px 3px 6px 3px;
   }
   
   .BurgerButton {
-    width: 18px;
-    height: 12px;
-    top: 4px;
-    left: 3px;
-    color: #6070ff;
+  width: 18px;
+  height: 12px;
+  top: 4px;
+  left: 3px;
+  color: #6070ff;
+  }
+  
+  .MainPage {
+    width: 375px;
+    height: 604px;
+    top: 92px;
+    padding: 114px 24px 114px 24px;
+    background-image: url('Assets/header-shapes\ mobileshape.png');
+    background-repeat: no-repeat;
+    
+  }
+  
+  .header2 {
+    width: 327px;
+    height: 150px;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 52px;
+    color: #172b4d;
+  }
+  
+  .Body2 {
+    width: 327px;
+    height: 146px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #344563;
+  }
+  
+  .socialcontainer {
+    width: 122px;
+    height: 24px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #7f8cff;
+    gap: 8px;
+    
+}
+  
+  .SocialIcons {
+    width: 170.17px;
+    height: 20px;
+    color: #505f79;
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .twitter {
+    width: 19.99px;
+    height: 19.96px;
+    background-image: url('Assets/Vectortwitter.svg');
+  }
+  
+  .linkedin {
+    margin-left: 19.01px;
+    width: 20px;
+    height: 20px;
+    background-image: url('Assets/Linkedin\ iconlinkedin.svg');
+    background-size: cover;
+  }
+  
+  .M {
+    margin-left: 20px;
+    width: 20px;
+    height: 16px;
+    background-image: url('Assets/Vectorm.svg');
+    margin-top: 2px;
+  }
+  
+  .github {
+    margin-left: 20px;
+    width: 17.99px;
+    height: 20px;
+    background-image: url('Assets/Vectorcat.svg');
+    background-size: cover;
+  }
+  
+  .Hand {
+    margin-left: 19.01px;
+    width: 14.17px;
+    height: 20px;
+    background-image: url('Assets/Vectorvictory.svg');
+    background-size: cover;
   }
