--- a/test.css
+++ b/test.css
@@ -1,63 +1,203 @@
 * {
     font-family: 'Poppins', sans-serif;
+  }.mobileworks {
+    width:  375px;
+    height: 2,788px;
+    top: 718px;
+    padding: 114px 24px 114px 24px;
+    gap: 88px;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25% ; /* 4 columns each taking up 1 fraction of the available space */
+
+    
   }
-  
+
+.cardworks1{
+width: 327px;
+height: 552px;
+padding: 16px 16px 16px 16px;
+border-radius: 16px 16px 16px 16px;
+border: 1px;
+gap: 12px;
+display: grid;
+border: 1px solid #DFE1E6;
+
+}
+.blogimagecontainer {
+  width: 295px;
+  height: 220px;
+  border-radius: 8px;
+  background-image: url('Assets/Snapshoot\ Portfolioblog.svg');
+}
+
+
+
+.blogblock1{
+  width: 295px;
+height: 288px;
+gap: 12px;
+
+}
+
+.blogbox1text1container{
+  width: 295px;
+  height: 80px;
+  gap: 12px;
+align-content: center;
+justify-content: center;
+}
+.texttonic{
+  width: 295px;
+  height: 36px;
+font-family: Poppins;
+font-size: 32px;
+font-weight: 700;
+line-height: 44px;
+letter-spacing: 0em;
+text-align: left;
+
+}
+.blogbox1text1frame2container{
+  width: 236px;
+  height: 32px;
+  gap: 12px;
+  background-image: url('Assets/Frame\ 2tonicframe2.svg');
+}
+
+.blogbox1text1frame3container{
+  width: 295px;
+height: 76px;
+font-family: Poppins;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0em;
+text-align: left;
+color: #344563;
+;
+
+}
+.htmlcssjavascript{
+  width: 214px;
+  height: 24px;
+  gap: 8px;
+background-image: url('assets/Tagshtmlcssjava.svg');
+}
+.seeprojectoutcontainer{
+width: 295px;
+height: 72px;
+padding: 12px 169px 12px 0px;
+
+}
+
+.seeprojectbutton{
+  width: 126px;
+  height: 48px;
+  top: 12px;
+  padding: 12px;
+  border-radius: 8px;
+  border: 1px;
+  gap: 10px;
+  background-image: url('assets/Enabledseeproject.png');
+ background-repeat: no-repeat;
+}
+
+
+.cardworks2{
+
+  width: 327px;
+  height: 596px;
+  padding: 16px;
+  border-radius: 16px;
+  border: 1px;
+  gap: 12px;
+  display:grid;
+
+
+}
+.cardworks3{
+
+  width: 327px;
+height: 552px;
+padding: 16px;
+border-radius: 16px;
+border: 1px;
+gap: 12px;
+display:grid;
+}
+
+.cardworks4{
+
+  width: 327px;
+height: 596px;
+padding: 16px;
+border-radius: 16px;
+border: 1px;
+gap: 12px;
+display:grid;
+}
   .Container {
-  width: 375px;
-  height: 92px;
-  padding-top: 44px;
+    width: 375px;
+    height: 92px;
+    padding-top: 44px;
+
+
   }
   
   .ToolbarDark {
-  width: 375px;
-  height: 48px;
-  top: 44px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 4px 24px 4px 12px;
+
+    width: 375px;
+    height: 48px;
+    top: 44px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 4px 24px 4px 12px;
+
   }
-  
   .MyLogoContainer {
-  width: 100px;
-  height: 40px;
-  top: 4px;
-  left: 12px;
+    width: 100px;
+    height: 40px;
+    top: 4px;
+    left: 12px;
   }
   
   .MyLogo {
-  width: 76px;
-  height: 20px;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 20px;
-  align-content: center;
-  color: #6070ff;
+    width: 76px;
+    height: 20px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 20px;
+    align-content: center;
+    color: #6070ff;
   }
   
   .BurgerButtonContainer {
-  width: 40px;
-  height: 40px;
-  top: 4px;
-  left: 311px;
-  padding: 8px;
-  border-radius: 8px;
+    width: 40px;
+    height: 40px;
+    top: 4px;
+    left: 311px;
+    padding: 8px;
+    border-radius: 8px;
+   
+
+    
   }
   
   .BurgerButtonContainer2 {
-  width: 24px;
-  height: 24px;
-  padding: 6px 3px 6px 3px;
+    width: 24px;
+    height: 24px;
+    padding: 6px 3px 6px 3px;
+   
   }
   
   .BurgerButton {
-  width: 18px;
-  height: 12px;
-  top: 4px;
-  left: 3px;
-  color: #6070ff;
+    width: 18px;
+    height: 12px;
+    top: 4px;
+    left: 3px;
+    color: #6070ff;
   }
-  
   .MainPage {
     width: 375px;
     height: 604px;
